fixed overflow blog details img and chand recent post images direction folder

--- a/css/Blog Details.css
+++ b/css/Blog Details.css
@@ -876,6 +876,11 @@ img {
         grid-template-columns: 1fr;
     }
 
+    .blog-Details #blog-detail-img {
+        width: 445px;
+        margin: auto;
+    }
+
     .blog-links {
         flex-direction: column;
         align-items: self-start;
